# botcocpy

./: .gitignore  Makefile  README.md  android.py  build_exe.spec  config.py  create_templates.py  grab_template.py  install.ps1  main.py  minitouch_client.py  pyproject.toml  swipe_script.txt  testes.py  ui.xml  vision.py  zoom_script.txt
.claude/: settings.local.json
bot/: __init__.py  bluestacks.py  device.py  i18n.py  settings.py
compat/: android.py  config.py  i18n.py  logger.py  vision.py
config/: __init__.py  army.json  config_manager.py  settings.py
core/: __init__.py  army_manager.py  bluestacks_manager.py  bot_controller.py  device_manager.py  game_actions.py  vision_engine.py
docs/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  EXE_PREPARATION.md  FINAL_ORGANIZATION.md  INSTALL_MAKE.md  MIGRATION_GUIDE.md  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  README_BUILD.md  README_EXE.md  REFACTORING_SUMMARY.md  ROOT_FILES.md
functions/: __init__.py  base.py  bluestacks_control.py  create_army.py  delete_army.py  donate.py
functions/army/: __init__.py  army.py
functions/config/: __init__.py  config.py
functions/donate/: __init__.py  donate.py
functions/vila/: __init__.py  vila.py
locales/: en-US.json  pt-BR.json
resources/: __init__.py
scripts/: grab_template.py  install_make.ps1  normalize_troop_names.py  organize_project.py  setup_resources.py
templates/: templates.json
tests/: conftest.py  test_imports.py
ui/: __init__.py  gui.py
utils/: __init__.py  compat.py  i18n.py  logger.py  resource_manager.py
(+1 files in other folders)
